refactor: move tabs to separate files, cleanup

--- a/blueprints/sections/form-confirmation-email.yml
+++ b/blueprints/sections/form-confirmation-email.yml
@@ -75,3 +75,6 @@ fields:
     when:
       confirmationEmail_type: template
       confirmationEmail_enabled: true
+
+  confirmationEmail_gap:
+    type: gap
