--- a/blueprints/sections/form-notification-email.yml
+++ b/blueprints/sections/form-notification-email.yml
@@ -77,3 +77,6 @@ fields:
     when:
       notificationEmail_type: template
       notificationEmail_enabled: true
+
+  notificationEmail_gap:
+    type: gap
