--- a/blueprints/pages/form.yml
+++ b/blueprints/pages/form.yml
@@ -3,41 +3,6 @@ title:
   de: Formular
 
 tabs:
-  fields:
-    icon: edit
-    label:
-      *: arnoson.kirby-forms.fields 
-    sections:
-      form_fields: sections/form-fields
-  entries:
-    icon: table
-    sections:
-      form_entries: sections/form-entries           
-  settings:
-    icon: settings
-    sections:
-      form_submit: sections/form-submit
-      line_1:
-        type: fields
-        fields:
-          line_1:
-            type: line
-      form_success: sections/form-success
-      line_2:
-        type: fields
-        fields:
-          line_2:
-            type: line      
-      form_error: sections/form-error     
-      line_3:
-        type: fields
-        fields:
-          line_3:
-            type: line      
-      form_confirmation_email: sections/form-confirmation-email
-      line_4:
-        type: fields
-        fields:
-          line_4:
-            type: line
-      form_notification_email: sections/form-notification-email
+  fields: tabs/form-fields
+  entries: tabs/form-entries
+  settings: tabs/form-settings
