--- a/blueprints/sections/form-error.yml
+++ b/blueprints/sections/form-error.yml
@@ -12,3 +12,6 @@ fields:
       *: arnoson.kirby-forms.message
     placeholder: Please fill in all fields correctly.
     default: Please fill in all fields correctly.
+
+  error_gap:
+    type: gap    
