--- a/blueprints/sections/form-submit.yml
+++ b/blueprints/sections/form-submit.yml
@@ -1,4 +1,5 @@
 type: fields
+title: arghh
 fields:
   submit_headline:
     type: headline
@@ -13,3 +14,6 @@ fields:
     placeholder: Submit
     label:
       *: arnoson.kirby-forms.submit-button-label
+
+  submit_gap:
+    type: gap
