feat: add aria-hidden asterisk for required fields
Before, we added it with `::after` which we can't hide from screen readers.

--- a/blueprints/blocks/form-field-checkboxes.yml
+++ b/blueprints/blocks/form-field-checkboxes.yml
@@ -3,6 +3,15 @@ name:
 icon: ☑️
 fields:
   extends: fields/form-field-basic
+  required:
+    type: toggle
+    label:
+      en: Required
+      de: Pflichtfeld
+    default: false
+    width: 2/12
+    # Html doesn't allow required on a group of checkboxes.
+    disabled: true
   default:
     type: text
     placeholder: 'option1, option2'
