feat!: store form entries as sub pages
Storing the entries inside the form page was causing a lot of issues

--- a/blueprints/tabs/form-settings.yml
+++ b/blueprints/tabs/form-settings.yml
@@ -1,4 +1,6 @@
 icon: settings
+label:
+  *: arnoson.kirby-forms.settings
 sections:
   form_submit: sections/form-submit
   form_success: sections/form-success
