chore: use translation

--- a/example/site/blueprints/pages/form-workshop.yml
+++ b/example/site/blueprints/pages/form-workshop.yml
@@ -4,6 +4,8 @@ title: Workshop
 tabs:
   settings:
     icon: settings
+    label:
+      *: arnoson.kirby-forms.settings
     sections:
       fields:
         type: fields
