fix: use `form-email-template` field for notification email
Thanks @AlexanderBoenninger!

--- a/blueprints/sections/form-notification-email.yml
+++ b/blueprints/sections/form-notification-email.yml
@@ -70,8 +70,7 @@ fields:
       notificationEmail_enabled: true
 
   notificationEmail_template:
-    label: Template
-    type: text
+    extends: fields/form-email-template
     required: true
     width: 2/3
     when:
