--- a/blueprints/blocks/form-field-checkboxes.yml
+++ b/blueprints/blocks/form-field-checkboxes.yml
@@ -8,6 +8,7 @@ fields:
     label:
       en: Required
       de: Pflichtfeld
+      nl: Verplicht
     default: false
     width: 2/12
     # Html doesn't allow required on a group of checkboxes.
