--- a/blueprints/fields/form-fields.yml
+++ b/blueprints/fields/form-fields.yml
@@ -21,6 +21,7 @@ fieldsets:
     label:
       en: Contact
       de: Kontakt
+      nl: Contact
     fieldsets:
       - form-field-email
       - form-field-tel
@@ -28,6 +29,7 @@ fieldsets:
     label:
       en: Date & Time
       de: Datum & Uhrzeit
+      nl: Datum & Tijd
     type: group
     fieldsets:
       - form-field-date
@@ -37,5 +39,6 @@ fieldsets:
     label:
       en: Other
       de: Sonstige
+      nl: Ander
     fieldsets:
       - form-field-url
