--- a/example/site/blueprints/fields/form-fields.yml
+++ b/example/site/blueprints/fields/form-fields.yml
@@ -1,5 +1,4 @@
-label:
-  *: arnoson.kirby-forms.fields
+label: arnoson.kirby-forms.fields
 type: layout
 layouts:
   - '1/1'
@@ -20,27 +19,18 @@ fieldsets:
       - form-field-range
   contact:
     type: group
-    label:
-      en: Contact
-      de: Kontakt
-      nl: Contact
+    label: arnoson.kirby-forms.contact
     fieldsets:
       - form-field-email
       - form-field-tel
   date_time:
-    label:
-      en: Date & Time
-      de: Datum & Uhrzeit
-      nl: Datum & Tijd
+    label: arnoson.kirby-forms.date-and-time
     type: group
     fieldsets:
       - form-field-date
       - form-field-time
   other:
     type: group
-    label:
-      en: Other
-      de: Sonstige
-      nl: Ander
+    label: arnoson.kirby-forms.other
     fieldsets:
       - form-field-url
