--- a/blueprints/pages/form.yml
+++ b/blueprints/pages/form.yml
@@ -1,8 +1,4 @@
-title:
-  en: Form
-  de: Formular
-  nl: Formulier
-
+title: arnoson.kirby-forms.form
 tabs:
   fields: tabs/form-fields
   entries: tabs/form-entries
