fix: prevent comma in option value

--- a/blueprints/blocks/form-field-checkboxes.yml
+++ b/blueprints/blocks/form-field-checkboxes.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.checkboxes  
+name: arnoson.kirby-forms.checkboxes
 icon: ☑️
 fields:
   extends: fields/form-field-basic
@@ -20,10 +19,11 @@ fields:
         type: text
         width: 1/2
         required: true
+        pattern: '^[^,]*$'
+        help: arnoson.kirby-forms.no-comma-in-value
       text:
         type: text
         width: 1/2
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-checkboxes-error
+    placeholder: arnoson.kirby-forms.invalid-checkboxes-error
