--- a/blueprints/blocks/form-field-radio.yml
+++ b/blueprints/blocks/form-field-radio.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.radio
+name: arnoson.kirby-forms.radio
 icon: 🔘
 fields:
   extends: fields/form-field-basic
@@ -14,10 +13,11 @@ fields:
         type: text
         width: 1/2
         required: true
+        pattern: '^[^,]*$'
+        help: arnoson.kirby-forms.no-comma-in-value
       text:
         type: text
         width: 1/2
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-radio-error
+    placeholder: arnoson.kirby-forms.invalid-radio-error
