--- a/blueprints/sections/form-error.yml
+++ b/blueprints/sections/form-error.yml
@@ -2,16 +2,14 @@ type: fields
 fields:
   error_headline:
     type: headline
-    label:
-      *: arnoson.kirby-forms.error
+    label: arnoson.kirby-forms.error
     numbered: false
-    
+
   error_invalidFields:
     type: writer
-    label:
-      *: arnoson.kirby-forms.message
+    label: arnoson.kirby-forms.message
     placeholder: Please fill in all fields correctly.
     default: Please fill in all fields correctly.
 
   error_gap:
-    type: gap    
+    type: gap
