--- a/blueprints/tabs/form-fields.yml
+++ b/blueprints/tabs/form-fields.yml
@@ -1,5 +1,4 @@
 icon: edit
-label:
-  *: arnoson.kirby-forms.fields 
+label: arnoson.kirby-forms.fields
 sections:
   form_fields: sections/form-fields
