--- a/blueprints/blocks/form-field-email.yml
+++ b/blueprints/blocks/form-field-email.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.email
+name: arnoson.kirby-forms.email
 icon: 📧
 fields:
   extends: fields/form-field-basic
@@ -15,5 +14,4 @@ fields:
     width: 1/2
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-email-error
+    placeholder: arnoson.kirby-forms.invalid-email-error
