--- a/blueprints/blocks/form-field-number.yml
+++ b/blueprints/blocks/form-field-number.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.number
+name: arnoson.kirby-forms.number
 icon: 🔟
 fields:
   extends: fields/form-field-basic
@@ -27,5 +26,4 @@ fields:
     width: 2/12
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-number-error    
+    placeholder: arnoson.kirby-forms.invalid-number-error
