--- a/blueprints/blocks/form-field-tel.yml
+++ b/blueprints/blocks/form-field-tel.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.tel
+name: arnoson.kirby-forms.tel
 icon: ☎️
 fields:
   extends: fields/form-field-basic
@@ -13,9 +12,8 @@ fields:
     width: 1/3
   pattern:
     extends: fields/form-field-pattern
-    placeholder: "[+0-9]+"
+    placeholder: '[+0-9]+'
     width: 1/3
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-tel-error
+    placeholder: arnoson.kirby-forms.invalid-tel-error
