--- a/blueprints/blocks/form-field-text.yml
+++ b/blueprints/blocks/form-field-text.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.text
+name: arnoson.kirby-forms.text
 icon: ✏️
 fields:
   extends: fields/form-field-basic
@@ -26,5 +25,4 @@ fields:
     width: 4/6
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-text-error
+    placeholder: arnoson.kirby-forms.invalid-text-error
