--- a/blueprints/blocks/form-field-textarea.yml
+++ b/blueprints/blocks/form-field-textarea.yml
@@ -1,5 +1,4 @@
-name:
-  *: arnoson.kirby-forms.textarea
+name: arnoson.kirby-forms.textarea
 icon: 📝
 fields:
   extends: fields/form-field-basic
@@ -15,5 +14,4 @@ fields:
     width: 1/3
   error:
     extends: fields/form-error-message
-    placeholder:
-      *: arnoson.kirby-forms.invalid-text-error
+    placeholder: arnoson.kirby-forms.invalid-text-error
