--- a/blueprints/sections/form-confirmation-email.yml
+++ b/blueprints/sections/form-confirmation-email.yml
@@ -2,30 +2,26 @@ type: fields
 fields:
   confirmationEmail_headline:
     type: headline
-    label:
-      *: arnoson.kirby-forms.confirmation-email
+    label: arnoson.kirby-forms.confirmation-email
     numbered: false
 
   confirmationEmail_enabled:
     type: toggle
     default: false
-    label:
-      *: arnoson.kirby-forms.enabled
+    label: arnoson.kirby-forms.enabled
     width: 2/12
 
   confirmationEmail_to:
     type: form-email-select
-    label:
-      *: arnoson.kirby-forms.email-to
+    label: arnoson.kirby-forms.email-to
     required: true
     width: 5/12
     when:
-      confirmationEmail_enabled: true      
+      confirmationEmail_enabled: true
 
   confirmationEmail_from:
     extends: fields/form-email-sender
-    label:
-      *: arnoson.kirby-forms.email-from
+    label: arnoson.kirby-forms.email-from
     placeholder: info@your-site.com
     required: true
     width: 5/12
@@ -34,8 +30,7 @@ fields:
 
   confirmationEmail_subject:
     type: text
-    label:
-      *: arnoson.kirby-forms.email-subject
+    label: arnoson.kirby-forms.email-subject
     placeholder: 'Thank you for your registration!'
     required: true
     width: 12/12
@@ -44,8 +39,7 @@ fields:
 
   confirmationEmail_type:
     type: toggles
-    label:
-      *: arnoson.kirby-forms.email-content
+    label: arnoson.kirby-forms.email-content
     default: text
     width: 1/3
     options:
