--- a/blueprints/sections/form-notification-email.yml
+++ b/blueprints/sections/form-notification-email.yml
@@ -2,21 +2,18 @@ type: fields
 fields:
   notificationEmail_headline:
     type: headline
-    label:
-      *: arnoson.kirby-forms.notification-email
+    label: arnoson.kirby-forms.notification-email
     numbered: false
 
   notificationEmail_enabled:
     type: toggle
     default: false
-    label:
-      *: arnoson.kirby-forms.enabled
+    label: arnoson.kirby-forms.enabled
     width: 2/12
 
   notificationEmail_to:
     type: email
-    label:
-      *: arnoson.kirby-forms.email-to
+    label: arnoson.kirby-forms.email-to
     placeholder: info@your-site.com
     required: true
     width: 5/12
@@ -25,18 +22,16 @@ fields:
 
   notificationEmail_from:
     extends: fields/form-email-sender
-    label:
-      *: arnoson.kirby-forms.email-from
+    label: arnoson.kirby-forms.email-from
     placeholder: info@your-site.com
     required: true
     width: 5/12
     when:
-      notificationEmail_enabled: true      
+      notificationEmail_enabled: true
 
   notificationEmail_subject:
     type: text
-    label:
-      *: arnoson.kirby-forms.email-subject
+    label: arnoson.kirby-forms.email-subject
     placeholder: Thank you for your registration!
     required: true
     width: 12/12
@@ -45,8 +40,7 @@ fields:
 
   notificationEmail_type:
     type: toggles
-    label:
-      *: arnoson.kirby-forms.email-content
+    label: arnoson.kirby-forms.email-content
     default: text
     width: 1/3
     options:
