--- a/blueprints/sections/form-submit.yml
+++ b/blueprints/sections/form-submit.yml
@@ -3,17 +3,15 @@ title: arghh
 fields:
   submit_headline:
     type: headline
-    label: 
-      *: arnoson.kirby-forms.submit
+    label: arnoson.kirby-forms.submit
     numbered: false
-    
+
   label_submit:
     type: text
     required: true
     default: Submit
     placeholder: Submit
-    label:
-      *: arnoson.kirby-forms.submit-button-label
+    label: arnoson.kirby-forms.submit-button-label
 
   submit_gap:
     type: gap
