--- a/blueprints/tabs/form-settings.yml
+++ b/blueprints/tabs/form-settings.yml
@@ -1,6 +1,5 @@
 icon: settings
-label:
-  *: arnoson.kirby-forms.settings
+label: arnoson.kirby-forms.settings
 sections:
   form_submit: sections/form-submit
   form_success: sections/form-success
