--- a/blueprints/sections/form-success.yml
+++ b/blueprints/sections/form-success.yml
@@ -12,10 +12,12 @@ fields:
     default: message
     options:
       - value: message
-        text: arnoson.kirby-forms.message
+        text:
+          *: arnoson.kirby-forms.message
         icon: text
       - value: page
-        text: arnoson.kirby-forms.page
+        text:
+          *: arnoson.kirby-forms.page
         icon: share
 
   success_text:
