feat: send form data in notification email

--- a/blueprints/sections/form-notification-email.yml
+++ b/blueprints/sections/form-notification-email.yml
@@ -57,8 +57,9 @@ fields:
     label: Text
     type: textarea
     buttons: false
-    required: true
+    required: false
     width: 2/3
+    help: arnoson.kirby-forms.empty-notification-body
     when:
       notificationEmail_type: text
       notificationEmail_enabled: true
