feat: add brevo action

--- a/blueprints/tabs/form-settings.yml
+++ b/blueprints/tabs/form-settings.yml
@@ -6,3 +6,4 @@ sections:
   form_error: sections/form-error
   form_confirmation_email: sections/form-confirmation-email
   form_notification_email: sections/form-notification-email
+  brevo: sections/form-brevo
