--- a/blueprints/tabs/form-settings.yml
+++ b/blueprints/tabs/form-settings.yml
@@ -1,6 +1,7 @@
 icon: settings
 label: arnoson.kirby-forms.settings
 sections:
+  form_save: sections/form-save
   form_submit: sections/form-submit
   form_success: sections/form-success
   form_error: sections/form-error
