feat: move hardcoded texts to translation files

--- a/blueprints/blocks/form-field-checkboxes.yml
+++ b/blueprints/blocks/form-field-checkboxes.yml
@@ -11,18 +11,22 @@ fields:
     disabled: true
   default:
     type: text
-    placeholder: 'option1, option2'
+    label: arnoson.kirby-forms.default
+    placeholder: arnoson-kirby-forms.default-checkboxes-placeholder
   options:
     type: structure
+    label: arnoson.kirby-forms.options
     fields:
       value:
         type: text
+        label: arnoson.kirby-forms.value
         width: 1/2
         required: true
         pattern: '^[^,]*$'
         help: arnoson.kirby-forms.no-comma-in-value
       text:
         type: text
+        label: arnoson.kirby-forms.text
         width: 1/2
   error:
     extends: fields/form-error-message
