--- a/blueprints/sections/form-confirmation-email.yml
+++ b/blueprints/sections/form-confirmation-email.yml
@@ -31,7 +31,7 @@ fields:
   confirmationEmail_subject:
     type: text
     label: arnoson.kirby-forms.email-subject
-    placeholder: 'Thank you for your registration!'
+    placeholder: arnoson.kirby-forms.email-subject-placeholder
     required: true
     width: 12/12
     when:
@@ -44,16 +44,18 @@ fields:
     width: 1/3
     options:
       - value: text
-        text: Text
+        text:
+          *: arnoson.kirby-forms.email-content-text
         icon: text
       - value: template
-        text: template
+        text:
+          *: arnoson.kirby-forms.email-content-template
         icon: template
     when:
       confirmationEmail_enabled: true
 
   confirmationEmail_body:
-    label: Text
+    label: arnoson.kirby-forms.email-content-text
     type: textarea
     buttons: false
     required: true
