--- a/blueprints/sections/form-notification-email.yml
+++ b/blueprints/sections/form-notification-email.yml
@@ -32,7 +32,7 @@ fields:
   notificationEmail_subject:
     type: text
     label: arnoson.kirby-forms.email-subject
-    placeholder: Thank you for your registration!
+    placeholder: arnoson.kirby-forms.email-subject-placeholder
     required: true
     width: 12/12
     when:
@@ -45,16 +45,18 @@ fields:
     width: 1/3
     options:
       - value: text
-        text: Text
+        text:
+          *: arnoson.kirby-forms.email-content-text
         icon: text
       - value: template
-        text: template
+        text:
+          *: arnoson.kirby-forms.email-content-template
         icon: template
     when:
       notificationEmail_enabled: true
 
   notificationEmail_body:
-    label: Text
+    label: arnoson.kirby-forms.email-content-text
     type: textarea
     buttons: false
     required: false
